WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247761
Regression(
254699@main
): fast/events/remove-iframe-during-toggle-crash.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=247761
Summary
Regression(254699@main): fast/events/remove-iframe-during-toggle-crash.html i...
Chris Dumez
Reported
2022-11-10 14:34:05 PST
fast/events/remove-iframe-during-toggle-crash.html is crashing since
254699@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-11-10 14:34:24 PST
<
rdar://100558596
>
Chris Dumez
Comment 2
2022-11-10 14:36:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6365
EWS
Comment 3
2022-11-10 16:07:17 PST
Committed
256552@main
(9c08d49c54bf): <
https://commits.webkit.org/256552@main
> Reviewed commits have been landed. Closing PR #6365 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug