Regression(254699@main): fast/events/remove-iframe-during-toggle-crash.html is crashing https://bugs.webkit.org/show_bug.cgi?id=247761 rdar://100558596

Reviewed by Geoffrey Garen.

254699@main added a call to `policyChecker().stopCheck()` inside Document::open().
The stopCheck() call can clear `m_frame` so we need to null-check `m_frame` again
after the call.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::open):

Canonical link: https://commits.webkit.org/256552@main